# mxltools

./: .gitignore  .qmake.stash  47+.d2i  632_1596913373.d2i  BUILD_WINDOWS_GUIDE.md  CMakeLists.txt  COMPLETE_IMPLEMENTATION_GUIDE.md  D2I_PROPERTY_ADDITION_COMPLETE_GUIDE.md  DATABASE_IMPLEMENTATION_COMPLETE.md  Huong_dan_doc_thuoc_tinh_item.md  ITEMPARSER_PROPERTIES_ANALYSIS.md  ITEM_CREATION_GUIDE.md  ITEM_EXTRACTION_GUIDE.md  JEWEL_CREATION_GUIDE.md  Makefile  MedianXLOfflineTools  MedianXLOfflineTools.pro  NEGATIVE_VALUES_GUIDE.md  NEGATIVE_VALUES_SUMMARY.md  PROPERTY_EDITOR_SUMMARY.md  PROPERTY_ID_ZERO_FIX.md  PROPERTY_LOADING_DEBUG.md  Property_Editor_Guide.md  RUNEWORD_PROPERTIES_FIX.md  SOCKETABLE_ITEMS_GUIDE.md  SOFTWARE_PORTING_API_SUMMARY.md  SUMMERY.MD  TEST_RESULTS_SUCCESS.md  UNIQUE_ITEMS_GUIDE.md  WINDOWS_EXE_SUMMARY.md  amu_1018642689.added.d2i  amu_1018642689.d2i  app.pri  build_simple.sh  build_windows.sh  d2_items.db  debug_segfault_focused.sh  fd  k04_952173388.added.d2i  k04_952173388.d2i  (+8 more)
analyze/: map_parsed_to_props.py  mapping_report.txt  parse_properties_bin.py  properties_parsed.tsv  propertiesext_parsed.tsv  props_from_bins_mapped.tsv
build-windows/: CMakeCache.txt
d2editor/: ADD_PROPERTY_WITH_PARAM_GUIDE.md  ADD_SKILL_PROPERTY_SUMMARY.md  D2I_FORMAT_COMPLETE_GUIDE.md  DATABASE_INTEGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  ITEM_STRUCTURE_ANALYSIS.md  ITEM_WITH_BLINK_ANALYSIS.md  PROPERTIES_WITH_PARAMETERS.md  PROPERTY_ADDITION_GUIDE.md  QUICK_START_GUI.md  README.md  RESEARCH.MD  SKILL_PROPERTIES_COMPARISON.md  UPDATE_SUMMARY.md  add_blink_property.py  add_property_with_param.py  add_skill_property.py  analyze_extended_fields.py  analyze_isextended.py  analyze_original.py  analyze_property_with_param.py  analyze_rich_structure.py  asdf.d2s  bitutils.py  calculate_properties_pos.py  check_prepend_corruption.py  check_structure.py  compare_bitstrings.py  compare_charms.py  compare_read_methods.py  compare_structures.py  convert_to_extended  convert_to_extended.cpp  convert_to_extended.py  copy_extended_props  copy_extended_props.cpp  copy_from_twi  copy_from_twi.cpp  create_charm_with_props  create_charm_with_props.cpp  (+69 more)
game_data_test/: items.tsv  itemtypes.db  props.csv
moc/: messagecheckbox_p.moc
save/: Pokemancer.d2s  Pokemancer.ma0  Pokemancer.map  Pokemancer.stash  _MXLOT.stash  _sharedstash.shared  asdf.d2s  asdf.map  asdf.stash  preferences.json  test_cpp.d2i  test_python.d2i  vbxcvb.ma0  vbxcvb.map
scripts/: README_ENHANCED_EXTRACTOR.md  build_item_database.py  comprehensive_demo.py  enhanced_extractor.py  generate_items_db.py  item_lookup.py
src/: CMakeLists.txt  addpropertydialog.cpp  addpropertydialog.h  application.cpp  arcanecrystalcreationwidget.cpp  arcanecrystalcreationwidget.h  build_item_from_scratch.cpp  compare_serializers.cpp  create_item_from_template_cli.cpp  create_special_item_cli.cpp  debug_bitstring.cpp  debug_chunk_conversion.cpp  deep_itemparser_research.cpp  direct_property_adder.cpp  dump_item_cli.cpp  enhancedpropertyadditionengine.cpp  enhancedpropertyadditionengine.h  enums.h  gemcreationwidget.cpp  gemcreationwidget.h  helpers.cpp  helpers.h  itemcreationwidget.cpp  itemcreationwidget.h  itemdatabase.cpp  itemparser.cpp  itemspropertiessplitter.cpp  itemspropertiessplitter.h  itemsviewerdialog_stubs.cpp  jewelcreationwidget.cpp  jewelcreationwidget.h  lengthwareserializer.cpp  lengthwareserializer.h  main.cpp  medianxlofflinetools.cpp  mysticorbcreationwidget.cpp  mysticorbcreationwidget.h  oilcreationwidget.cpp  oilcreationwidget.h  propertiesviewerwidget.cpp  (+15 more)
tools/: bittext_editor.py  insert_property.py  inspect_d2i.py
ui/: ui_allstatsdialog.h  ui_finditemsdialog.h  ui_medianxlofflinetools.h  ui_propertiesviewerwidget.h  ui_qd2charrenamer.h  ui_resurrectpenaltydialog.h  ui_stashsortingoptionsdialog.h
utils/: EXTRACT_DATA_README.md  (+5 more)
(+75 files in other folders)
